syntax = "proto3";
package auth_token;
option go_package = "cloudos/common/pb";

message AuthToken {
    int64 id = 1;
    int64 user_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    int64 issued_time = 5;
    int64 expire_time = 6;
    int64 create_time = 1001;
    int64 update_time = 1002;
    int64 delete_time = 1003;
}